[project]
name = "repl-nix-wifinetmanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-jwt-extended>=4.6.0",
    "flask-migrate>=4.0.7",
    "flask-socketio>=5.4.1",
]
